codebuild-update/java-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bingo-java-service
  namespace: bingo
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9090
    protocol: TCP
  selector:
    app: bingo-java
